--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,11 +29,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-CHTyoPTp9QUdWLs4rv5_9SdYcEEQc7E&libraries=geometry,places&callback=initMap">
-  </script>
-    <link rel="stylesheet" href="./style.css"/>
-    <script src="https://kit.fontawesome.com/1599d6604b.js" crossorigin="anonymous"></script>
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-CHTyoPTp9QUdWLs4rv5_9SdYcEEQc7E&libraries=geometry,places&callback=initMap"
+    ></script>
+    <link rel="stylesheet" href="./card.css" />
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/1599d6604b.js"
+      crossorigin="anonymous"
+    ></script>
     <title>React App</title>
   </head>
   <body>
@@ -46,6 +54,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-
   </body>
 </html>
